# advent-of-code-2024

./: .gitignore
.devcontainer/: devcontainer.json
day_00_template/: part2.c
day_01/: CMakeLists.txt  helper.c  helper.h  part1.c  part2.c
day_02/: helper.c  helper.h  part1.c  part2.c
day_03/: helper.c  part1.c  part2.c
day_03/res/: puzzle_input.txt
day_04/: part1.c  part2.c
